vue-router added

--- a/src/assets/stylesheets/scss/abstract/_variables.scss
+++ b/src/assets/stylesheets/scss/abstract/_variables.scss
@@ -1,9 +1,16 @@
-$main: #131A40;
-$main-shade: #355B8C;
-$main-shade1: #081826;
+// $main: #131A40;
+// $main-shade: #355B8C;
+// $main-shade1: #081826;
 
-$second: #17AEBF;
-$second-shade: #30F2F2;
+// $second: #17AEBF;
+// $second-shade: #30F2F2;
+
+$main-color: #7FFFD4;
+$main-nuance: #96FFDC;
+$main-nuance1: #7DFFD4;
+
+$second-color: #B34D34;
+$second-nuance: #FF977D;
 
 $white: #ffffff;
 
