--- a/src/assets/stylesheets/scss/layout-style/header-scss.scss
+++ b/src/assets/stylesheets/scss/layout-style/header-scss.scss
@@ -1,6 +1,6 @@
 
 .header {
-    background-color: $main-shade;
+    background-color: $second-color;
     &__wrapper {
         max-width: 93.75rem;
         padding: 1rem 1.5rem;
