--- a/src/assets/stylesheets/scss/global.scss
+++ b/src/assets/stylesheets/scss/global.scss
@@ -2,6 +2,7 @@
 @import "abstract/variables";
 @import "abstract/grids";
 @import "utilities/utilities";
+@import url('https://fonts.googleapis.com/css?family=Gotu&display=swap');
 
 
 
@@ -10,7 +11,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Gotu', sans-serif;
 }
 
 ul {
