--- a/src/assets/stylesheets/scss/abstract/_variables.scss
+++ b/src/assets/stylesheets/scss/abstract/_variables.scss
@@ -5,24 +5,22 @@
 // $second: #17AEBF;
 // $second-shade: #30F2F2;
 
-$main-color: #7FFFD4;
-$main-nuance: #96FFDC;
-$main-nuance1: #7DFFD4;
+$main-color: #7fffd4;
+$main-nuance: #96ffdc;
+$main-nuance1: #7dffd4;
+$main-nuance2: #26ce96;
 
-$second-color: #B34D34;
-$second-nuance: #FF977D;
+$second-color: #b34d34;
+$second-nuance: #ff977d;
 
 $white: #ffffff;
 
 $grey: rgb(148, 148, 148);
 
 $black: #161616;
-$white-shade:#f0f0e8;
+$white-shade: #f0f0e8;
 
-
-
-
-$font-sm: .8rem;
+$font-sm: 0.8rem;
 $font-common: 1rem;
 $font-md: 1.2rem;
 $font-lg: 1.5rem;
