--- a/src/assets/stylesheets/scss/components/_colorTheme.scss
+++ b/src/assets/stylesheets/scss/components/_colorTheme.scss
@@ -1,97 +1,105 @@
 .colorTheme {
-    width: 10rem;
+  width: 10rem;
+  height: 20rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  color: $white-shade;
+  padding: 1.2rem 0.8rem;
+
+  @include tablet {
+    width: 8rem;
+    height: 14rem;
+  }
+
+  &__title {
+    font-size: 1rem;
+    text-align: center;
+    letter-spacing: 2px;
+    font-weight: 300;
+  }
+
+  &__composition {
+    text-align: center;
+    font-weight: 300;
+    font-size: 0.9rem;
+  }
+
+  &__preview {
     height: 20rem;
+    width: 100%;
+    margin: 0 auto;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    align-items: flex-end;
+    justify-content: center;
+  }
+
+  &__footer {
+    border-top: 1px solid #f7f6f6;
+    border-bottom: 1px solid #f7f6f6;
+    margin-top: 1rem;
+    max-width: 100%;
+  }
+
+  &__controller {
+    position: relative;
+    display: flex;
+    width: 100%;
     align-items: center;
-    color: $white-shade;
-    padding: 1.2rem 0.8rem;
-  
-    @include tablet {
-      width: 8rem;
-      height: 14rem;
-    }
-  
-    &__title {
-      font-size: 1rem;
-      text-align: center;
-      letter-spacing: 2px;
-      font-weight: 300;
-    }
-  
-    &__composition {
-      text-align: center;
-      font-weight: 300;
-      font-size: 0.9rem;
-    }
-  
-    &__preview {
-      height: 20rem;
-      width: 100%;
-      margin: 0 auto;
-      display: flex;
-      align-items: flex-end;
-      justify-content: center;
-    }
-  
-    &__footer {
-      border-top: 1px solid #f7f6f6;
-      border-bottom: 1px solid #f7f6f6;
-      margin-top: 1rem;
-      max-width: 100%;
-    }
-  
-    &__controller {
-      position: relative;
-      display: flex;
-      width: 100%;
-      align-items: center;
-      margin-top: 1rem;
-      height: 5rem;
-    }
-  
-    &__copy {
-      display: none;
-      position: absolute;
-      bottom: 1rem;
-      left: 0;
-      right: 0;
-      margin: 0 auto;
-      text-align: center;
-      width: 100%;
-    }
-  
-    &__btn {
-      color: $white;
-      border: none;
-      background-color: transparent;
-      text-align: center;
-      cursor: pointer;
-      padding: 0.5rem 1rem;
-  
-      &:focus,
-      &:active {
-        outline: none;
-        font-weight: bold;
-        transform: scale(1.05);
-      }
-    }
-  
-    &__input {
-      display: block;
-      padding: 1rem;
-      margin: 0 auto;
-      width: 100%;
-      background-color: transparent;
-      border: 0;
-      color: $white;
-      text-align: center;
-    }
-  
-    &__svg {
-      fill: white;
-      width: 2rem;
-      margin-right: 0.4rem;
+    margin-top: 1rem;
+    height: 5rem;
+  }
+
+  &__copy {
+    display: none;
+    position: absolute;
+    bottom: 1rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    text-align: center;
+    width: 100%;
+  }
+
+  &__btn {
+    color: $white;
+    border: none;
+    background-color: transparent;
+    text-align: center;
+    cursor: pointer;
+    padding: 0.5rem 1rem;
+
+    &:focus,
+    &:active {
+      outline: none;
+      font-weight: bold;
+      transform: scale(1.05);
     }
   }
+
+  &__input {
+    display: block;
+    padding: 1rem;
+    margin: 0 auto;
+    width: 100%;
+    background-color: transparent;
+    border: 0;
+    color: $white;
+    text-align: center;
+  }
+
+  &__svg {
+    fill: white;
+    width: 2rem;
+    margin-right: 0.4rem;
+  }
+
+  &__save {
+    cursor: pointer;
+    font-size: 1.4rem;
+    &:hover {
+      color: red;
+    }
+  }
+}
